hard-gists/13f02f45a41ad90f454f/run.log
=== Docker Run Log for 13f02f45a41ad90f454f ===
Started at: Mi 29. Okt 12:12:40 CET 2025

[2025-10-29 12:12:41] START: Running container for 13f02f45a41ad90f454f
[2025-10-29 12:12:41] SUCCESS: Container 395a0e4aaa9a152fbe15d6da1c81a91dc3a8af5e3d95bc7c287c1d01c76f1f15 started for 13f02f45a41ad90f454f
=== Container logs for 13f02f45a41ad90f454f ===
  File "/snippet.py", line 63
    print 'Starting request to Project Oxford...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 13f02f45a41ad90f454f ===
[2025-10-29 12:12:43] INFO: Container 395a0e4aaa9a152fbe15d6da1c81a91dc3a8af5e3d95bc7c287c1d01c76f1f15 has stopped
